--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="eight columns" style="margin-top: 15%">
           <h2>Have You Heard This Song</h4>
-          <h5>HYHTS Is an ultra-simple highly personal music discovery engine. Tell us a secret, and we'll use Machine Learning to pick a new song and artist we're sure you'll love. </h5>
+          <h5>HYHTS Is an ultra-simple highly personal music discovery engine. Tell us what you had for dinner, and we'll use Machine Learning to pick a new song and artist we're sure you'll love. </h5>
 
 
           <form id="myForm" name="myForm">
@@ -71,7 +71,7 @@
 
          <p> 
           <span style="opacity: 50%; font-size: 1.1rem; line-height: 1;  letter-spacing: 0;"> 
-         Your secrets are entirely anonymous, no user data is collected with your secret, and secrets may be used to improve the accuracy of our service and for promotional purposes.
+         Your dinner is entirely anonymous, no user data is collected with your dinner, and dinners may be used to improve the accuracy of our service and for promotional purposes.
        </span> </p>
 
        </div>
