--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <form id="myForm" name="myForm">
 
-           <input style="width:100%; color: black!important;" type="text" name="secret" placeholder="I wore diapers until I was 7">
+           <input style="width:100%; color: black!important;" type="text" name="secret" placeholder="Pasts">
            <br>
            <button style="margin-top:10px; color: #FFF;
            background-color: #33C3F0;
