--- a/play.html
+++ b/play.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns" style="margin-top: 15%">
-          <h2>Your Song: Stupid Horse, By 100 gecs
+          <h2>Your Song
           </h4>
 
             <iframe style="display:inline-block;" src="https://open.spotify.com/embed/track/3VHiIVQe8Sc6gtSsTp3pDz" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
