--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       <div class="row">
         <div class="eight columns" style="margin-top: 15%">
           <h2>Have You Heard This Song</h4>
-          <h5>HYHTS Is an ultra-simple highly personal music discovery engine. Tell us what you had for dinner, and we'll use Machine Learning to pick a new song and artist we're sure you'll love. </h5>
+          <h5>HYHTS Is an ultra-simple highly personal music discovery engine. Tell us your favorite color, and we'll use Machine Learning to pick a new song and artist we're sure you'll love. </h5>
 
 
           <form id="myForm" name="myForm">
 
-           <input style="width:100%; color: black!important;" type="text" name="secret" placeholder="Pasta">
+           <input style="width:100%; color: black!important;" type="text" name="secret" placeholder="Type a color here">
            <br>
            <button style="margin-top:10px; color: #FFF;
            background-color: #33C3F0;
@@ -71,7 +71,7 @@
 
          <p> 
           <span style="opacity: 50%; font-size: 1.1rem; line-height: 1;  letter-spacing: 0;"> 
-         Your dinner is entirely anonymous, no user data is collected with your dinner, and dinners may be used to improve the accuracy of our service and for promotional purposes.
+         Your favorite color is entirely anonymous, no user data is collected with your favorite color, and favorite colors may be used to improve the accuracy of our service and for promotional purposes.
        </span> </p>
 
        </div>
